# auto_apms_behavior_codec

./: README.md
.github/workflows/: build-and-test-reusable.yaml  rolling.yaml
auto_apms_behavior_codec/: CMakeLists.txt  package.xml
auto_apms_behavior_codec/cmake/: patch_tinycbor.cmake
auto_apms_behavior_codec/config/: decoder_base_params.yaml  decoder_executor_client_params.yaml  decoder_executor_params.yaml  decoder_params.yaml  decoder_publisher_params.yaml  encoder_base_params.yaml  encoder_executor_proxy_params.yaml  encoder_params.yaml  encoder_subscriber_params.yaml
auto_apms_behavior_codec/include/: behavior_tree_encoder.hpp  behavior_tree_representation.hpp  dictionary_manager.hpp
auto_apms_behavior_codec/include/auto_apms_behavior_codec/: behavior_tree_decoder.hpp  behavior_tree_decoder_base.hpp  behavior_tree_encoder.hpp  behavior_tree_encoder_base.hpp  behavior_tree_representation.hpp  dictionary_manager.hpp  executor_command.hpp  executor_feedback.hpp  executor_telemetry.hpp  telemetry_accumulator.hpp  telemetry_message_builder.hpp  tree_decoder_executor.hpp  tree_decoder_executor_client.hpp  tree_decoder_publisher.hpp  tree_encoder_executor_proxy.hpp  tree_encoder_subscriber.hpp  util.hpp
auto_apms_behavior_codec/src/: behavior_tree_decoder.cpp  behavior_tree_decoder_base.cpp  behavior_tree_encoder.cpp  behavior_tree_encoder_base.cpp  behavior_tree_representation.cpp  cbor_deserialization.cpp  cbor_serialization.cpp  dictionary_manager.cpp  dummy_telemetry_generator.cpp  telemetry_message_builder.cpp  tree_decoder_executor.cpp  tree_decoder_executor_client.cpp  tree_decoder_publisher.cpp  tree_encoder_executor_proxy.cpp  tree_encoder_executor_proxy_main.cpp  tree_encoder_subscriber.cpp  util.cpp
auto_apms_behavior_codec/test/: test_executor_command.cpp  test_executor_feedback.cpp  test_executor_telemetry.cpp  test_tree_encoder_executor_proxy.cpp  test_tree_encoding_decoding.cpp  test_type_payload_string_message.cpp
auto_apms_behavior_codec_examples/: CMakeLists.txt  package.xml
auto_apms_behavior_codec_examples/behavior/: goto_examples.xml  hello_world.xml  hello_world_with_conditions.xml
auto_apms_behavior_codec_examples/behavior/node_manifest/: goto_manifest.yaml
auto_apms_behavior_codec_examples/config/: goto_codec_params.yaml
auto_apms_behavior_codec_examples/src/: dummy_telemetry_generator.cpp
auto_apms_behavior_codec_interfaces/: CMakeLists.txt  package.xml
auto_apms_behavior_codec_interfaces/msg/: DeserializedMessage.msg  ExecutorCommandMessage.msg  ExecutorFeedbackMessage.msg  SerializedMessage.msg  SerializedTelemetryMessage.msg  SerializedTreeMessage.msg  TelemetryEntryMessage.msg  TreeXmlMessage.msg
