<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>auto_apms_behavior_codec_examples</name>
  <version>0.0.0</version>
  <description>Examples for auto_apms_behavior_codec</description>
  <maintainer email="mueller@fsr.tu-darmstadt.de">robin</maintainer>
  <license>Apache-2.0</license>

  <depend>auto_apms_behavior_codec</depend>
  <depend>auto_apms_behavior_tree</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
